--- a/sourcecode/apis/contentauthor/resources/assets/react/language/nn.json
+++ b/sourcecode/apis/contentauthor/resources/assets/react/language/nn.json
@@ -1,1 +1,18 @@
-{}
+{
+    "AUDIOBROWSER.SEARCHPLACEHOLDER": "Finn lyd…",
+    "AUDIOBROWSER.SEARCHBUTTONTITLE": "Søk",
+    "AUDIOBROWSER.USEAUDIO": "Bruk lyd",
+    "AUDIOBROWSER.NORESULTS": "Ingen treff",
+    "VIDEOBROWSER.SEARCHPLACEHOLDER": "Finn videoar…",
+    "VIDEOBROWSER.SEARCHBUTTONTITLE": "Søk",
+    "VIDEOBROWSER.LOADMOREVIDEOS": "Last fleire videoar",
+    "VIDEOBROWSER.NORESULTS": "Fann ingen videoar",
+    "VIDEOBROWSER.ADDVIDEO": "Legg til video",
+    "VIDEOBROWSER.PREVIEWVIDEO": "Førehandsvisning",
+    "VIDEOBROWSER.PUBLISHEDDATE": "Publiseringsdato",
+    "VIDEOBROWSER.DURATION": "Varigheit",
+    "VIDEOBROWSER.INTERACTIONCOUNT": "Visningar",
+    "IMAGEBROWSER.SEARCHPLACEHOLDER": "Finn bilete…",
+    "IMAGEBROWSER.USE": "Bruk",
+    "IMAGEBROWSER.SEARCH": "Søk"
+}
